tests/error/comptime/pointer_arithmetic12.bz
// error: invalid pointer arithmetic operation with type '*i32' and offset 1
// note: while evaluating expression at compile time
// note: address is a one-past-the-end pointer to a subobject that is not in an array in this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let t = [i32, i32]();
		&t[0] + 1 + 1;
	});
}
